<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".HomePage">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_to_your_profile"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        tools:ignore="NotSibling" />

    <LinearLayout
        android:id="@+id/cardlayout1"
        android:layout_below="@id/textView"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="10dp"
            android:id="@+id/card1">
            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/background"
                android:orientation="horizontal"
                android:layout_height="180dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="140dp"
                    android:layout_marginVertical="20dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">
                                    <LinearLayout
                                        android:layout_width="100dp"
                                        android:orientation="vertical"
                                        android:layout_marginStart="10dp"
                                        android:layout_height="100dp">
                                        <TextView
                                            android:layout_width="100dp"
                                            android:layout_height="wrap_content"
                                            android:hint="Temperature"
                                            android:textSize="15dp" />
                                        <LinearLayout
                                            android:layout_width="wrap_content"
                                            android:layout_height="match_parent"
                                            android:layout_marginTop="10dp">
                                            <TextView
                                                android:id="@+id/temp"
                                                android:layout_width="60dp"
                                                android:layout_height="100dp"
                                                android:hint="30"
                                                android:textSize="50dp" />
                                            <TextView
                                                android:layout_width="40dp"
                                                android:layout_height="wrap_content"
                                                android:layout_marginTop="-18dp"
                                                android:text="°C"
                                                android:textSize="20dp" />
                                        </LinearLayout>
                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="90dp"
                                        android:orientation="vertical"
                                        android:layout_height="100dp"
                                        android:layout_marginLeft="10dp">
                                        <TextView
                                            android:layout_width="100dp"
                                            android:layout_height="wrap_content"
                                            android:hint="Humidity"
                                            android:textSize="15sp" />
                                        <LinearLayout
                                            android:layout_width="wrap_content"
                                            android:layout_height="match_parent"
                                            android:layout_marginTop="10dp">
                                            <TextView
                                                android:id="@+id/hum"
                                                android:layout_width="58dp"
                                                android:layout_height="100dp"
                                                android:hint="60"
                                                android:textSize="50sp" />
                                            <TextView
                                                android:layout_width="40dp"
                                                android:layout_height="wrap_content"
                                                android:layout_marginTop="-18dp"
                                                android:text="%"
                                                android:textSize="20sp" />
                                        </LinearLayout>
                                    </LinearLayout>


                                    <LinearLayout
                                        android:layout_width="130dp"
                                        android:orientation="vertical"
                                        android:layout_height="100dp"
                                        android:layout_marginStart="15dp">
                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:hint="Pressure"
                                            android:textSize="15sp" />
                                            <LinearLayout
                                                android:layout_width="wrap_content"
                                                android:layout_height="match_parent"
                                                android:layout_marginTop="10dp">
                                                <TextView
                                                    android:id="@+id/pres"
                                                    android:layout_width="90dp"
                                                    android:layout_height="100dp"
                                                    android:layout_marginTop="10dp"
                                                    android:hint="1010"
                                                    android:textSize="40dp" />

                                                <TextView
                                                    android:layout_width="40dp"
                                                    android:layout_height="wrap_content"
                                                    android:layout_marginTop="9dp"
                                                    android:text="hPa"
                                                    android:textSize="20sp" />
                                            </LinearLayout>
                                    </LinearLayout>

                   </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/cardlayout2"
        android:layout_below="@id/cardlayout1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="180dp">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="10dp"
            android:id="@+id/card2">
            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/background"
                android:orientation="horizontal"
                android:layout_height="180dp">
                



            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>


    <Button
        android:id="@+id/getdata"
        android:layout_below="@id/cardlayout2"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:shadowColor="@color/colorPrimaryDark"
        android:text="@string/get_data"/>
    <Button
        android:id="@+id/buttonMaps"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardlayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:background="@color/colorPrimary"
        android:text="@string/maps"
        android:textAllCaps="false"
        android:textColor="@color/white" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:id="@+id/ll2"
        android:layout_below="@id/buttonMaps"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/serreply"
        android:layout_width="150dp"
        android:layout_height="30dp"/>
    <TextView
        android:id="@+id/flood"
        android:layout_width="150dp"
        android:layout_height="30dp"/>
    <Button
        android:id="@+id/get"
        android:text="@string/get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll2"
        android:id="@+id/noti"
        android:text="@string/notification"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/noti"
        android:orientation="vertical"
        android:layout_marginTop="40dp">
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:entries="@array/topics"/>

        <Button
            android:id="@+id/buttonSubscribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subscribe" />
    </LinearLayout>
</RelativeLayout>
</ScrollView>